--- a/pythons/pytest.ini
+++ b/pythons/pytest.ini
@@ -3,3 +3,9 @@
 markers =
     p1:
     p2:
+##当前目录下，以test开头，以.py结尾的所有文件中，以Test开头的类内，以test_开头的方法 -可自定义
+testpaths = .
+python_files = test*.py
+python_classes = Test_*
+    test_*
+python_functions = test_*
